fix duplicate params in swagger by improve requests and service refines
