# docs/swagger.json
@@ -227,29 +227,10 @@
                 "summary": "Get Department",
                 "parameters": [
                     {
-                        "type": "string",
-                        "name": "department",
-                        "in": "path"
-                    },
-                    {
                         "type": "integer",
                         "name": "id",
-                        "in": "path"
-                    },
-                    {
-                        "type": "boolean",
-                        "name": "expand",
-                        "in": "path"
-                    },
-                    {
-                        "type": "string",
-                        "name": "department",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "departmentId",
-                        "in": "query"
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "type": "boolean",
@@ -285,24 +266,10 @@
                 "summary": "Update Department",
                 "parameters": [
                     {
-                        "type": "string",
-                        "name": "department",
-                        "in": "path"
-                    },
-                    {
                         "type": "integer",
                         "name": "id",
-                        "in": "path"
-                    },
-                    {
-                        "type": "boolean",
-                        "name": "expand",
-                        "in": "path"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "departmentId",
-                        "in": "query"
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "type": "integer",
